                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 15-02-2005 fixed: More weather localization stuff.  New ids need translating: 388-393. Thanks to vnm.
  - 15-02-2005 fixed: [ 1122791 ] LCD: no display of current playbacktime while videoplayback
  - 15-02-2005 fixed: wrong display in the lcd of following asci characters: _ [ ] \
  - 14-02-2005 added: [ 1121950 ] Kai Games Dir & Game Search - thanks to scampa123
                      Games to start using kai are also looked up in the program's database
  - 14-02-2005 fixed: Possible crashes in ListControl + RssControl.
  - 14-02-2005 fixed: Listcontrols weren't cleared correctly in some views during UpdateDir().
  - 14-02-2005 fixed: Temperature label now shown correctly for weather using infolabels.
  - 13-02-2005 fixed: No space between date and time in system info
  - 13-02-2005 fixed: short date's day and month are not swapped like in settings set
  - 13-02-2005 fixed: album cover disappears if next song in a playlist is played
  - 13-02-2005 added: Keymapping for python debug - only runs from the Scripts window - thanks to EnderW + NotWired.
  - 13-02-2005 fixed: [ 1121387 ]	Fatal exception after dir up and select in an empty folder
  - 12-02-2005 added: New infolabels: System.FreeSpace(C) returns freespace on C (E, F, or G) and Network.IPAddress
  - 12-02-2005 fixed: Rebuilt image libs - seems to cure TIFF loading issues.
  - 10-02-2005 updated: Korean language file (Thnx to akoakoako)
  - 10-02-2005 fixed: Weather localization.
  - 10-02-2005 fixed: [ 1119893 ] XLink Kai window freezes after chatting then pressing left